testsuite/tests/statmemprof/exception_callback_minor.reference
<<<<<<< oxcaml
Exception from memprof.
||||||| upstream-base
Fatal error: exception File "exception_callback_minor.ml", line 16, characters 30-36: Assertion failed
=======
Exception from alloc_minor callback.
>>>>>>> upstream-incoming
